--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -23,3 +23,18 @@
 .column {
   padding-top: 0;
 }
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
